fix hero colors on mobile

--- a/assets/sass/system/hero.sass
+++ b/assets/sass/system/hero.sass
@@ -126,6 +126,11 @@
         .page-research &,
         .page-eco-place &,
         .page-schooling &
+            .content
+                margin-left: var(--grid-gutter-negative)
+                margin-right: var(--grid-gutter-negative)
+                padding-left: var(--grid-gutter)
+                padding-right: var(--grid-gutter)
             .breadcrumb-nav
                 margin-bottom: 0
         // empêcher les images de se décaler hors du hero
